(fix) Update banner pattern.

--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -33,7 +33,8 @@
     "fmt:js": "eslint --fix --ext .js,.vue ./",
     "fmt:css": "npm run lint:css --fix && prettier --loglevel warn --write '**/*.{css}'",
     "fmt": "npm run fmt:js; npm run fmt:css",
-    "ci": "npm run lint && npm run build:drupal"
+    "ci": "npm run lint && npm run build:drupal",
+    "chromatic": "npx chromatic --project-token 56g60sdfr38"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
