--- a/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
@@ -2,7 +2,6 @@ banner:
   use: "@molecules/banner/banner.twig"
   label: Banner
   description: Big image banner with text overlay.
-  allow_variant_token: true
   fields:
     image:
       type: pattern
@@ -27,6 +26,7 @@ banner:
   settings:
     position:
       type: select
+      allow_token: true
       label: Position
       default_value: center_center
       options:
