Update docs layout.

--- a/docs/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/docs/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -12,15 +12,21 @@ button:
       label: Default
       configuration:
         colors:
-          primary: 'border-teal-600 bg-teal-600 text-white hover:bg-teal-300 hover:border-teal-300'
-          secondary: 'border-yellow-300 bg-yellow-300 text-black hover:bg-yellow-600 hover:border-yellow-600'
+          primary: 'border-teal-500 bg-teal-500 px-6 font-bold text-black hover:shadow-md'
+          secondary: 'border-yellow-300 bg-yellow-300 px-6 text-black hover:bg-yellow-600 hover:border-yellow-600'
     outline:
       label: Outline
       configuration:
         colors:
-          primary: 'border-teal-300 text-black hover:bg-teal-600 hover:border-teal-600 hover:text-white'
-          secondary: 'border-yellow-600 text-black hover:bg-yellow-600 hover:text-white'
+          primary: 'border-teal-300 text-black px-6 hover:bg-teal-600 hover:border-teal-600 hover:text-white'
+          secondary: 'border-yellow-600 text-black px-6 hover:bg-yellow-600 hover:text-white'
       description: Inverts colors
+    rounded:
+      label: Rounded
+      configuration:
+        colors:
+          primary: 'border-teal-500 bg-teal-500 px-12 rounded-3xl text-black'
+          secondary: 'border-yellow-300 bg-yellow-300 px-12 rounded-3xl text-black hover:bg-yellow-600 hover:border-yellow-600'
   configuration:
     size:
       text:
