--- a/docs/package.json
+++ b/docs/package.json
@@ -52,8 +52,8 @@
     "@wingsuit-designsystem/core": "1.0.0-rc.3",
     "@wingsuit-designsystem/pattern": "1.0.0-rc.3",
     "@wingsuit-designsystem/pattern-react": "1.0.0-rc.3",
-    "@wingsuit-designsystem/preset-pages": "1.0.0-rc.3",
     "@wingsuit-designsystem/preset-mdx": "1.0.0-rc.3",
+    "@wingsuit-designsystem/preset-pages": "1.0.0-rc.3",
     "@wingsuit-designsystem/preset-tailwind2": "1.0.0-rc.3",
     "@wingsuit-designsystem/storybook": "1.0.0-rc.3",
     "autoprefixer": "^9.7.4",
@@ -90,6 +90,7 @@
     "@tailwindcss/typography": "^0.3.1",
     "alpinejs": "^2.7.0",
     "buffer": "^6.0.3",
+    "highlight.js": "^10.7.1",
     "svg4everybody": "^2.1.9",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
