--- a/presets/pages/package.json
+++ b/presets/pages/package.json
@@ -40,6 +40,7 @@
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.3.0",
     "js-yaml": "^4.0.0",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "static-site-generator-webpack-plugin": "^3.4.2"
   }
