--- a/presets/tailwind2/package.json
+++ b/presets/tailwind2/package.json
@@ -26,7 +26,7 @@
     "url": "https://github.com/wingsuit-designsystem/wingsuit/issues"
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
-  "devDependencies": {
+  "dependencies": {
     "tailwindcss": "^2.0.1-compat",
     "@wingsuit-designsystem/core": "1.0.0-rc.6",
     "fs-extra": "^9.0.0",
