--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,9 +49,10 @@
     "merge-deep": "^3.0.2",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^4.2.0",
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
+    "postcss": "^7.0.35",
     "postcss-replace": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "resolve-url-loader": "^3.1.1",
