--- a/starter-kits/bootstrap/package.json
+++ b/starter-kits/bootstrap/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-backgrounds": "^6.0.0",
     "@storybook/addon-links": "^6.0.0",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-viewport": "^6.0.0",
     "@storybook/addons": "^6.0.0",
     "@storybook/linter-config": "^2.5.0",
@@ -64,6 +65,7 @@
     "eslint-plugin-vue": "^6.0.1",
     "jquery-once": "^2.2.3",
     "lodash": "^4.17.20",
+    "postcss": "^7.0.35",
     "postcss-nested": "^4.2.1",
     "postcss-scss": "^3.0.4",
     "prettier": "^1.19.1",
