(tests) Add starter-kits to persitent paths.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
           paths:
             - packages
             - presets
+            - starter-kits
             - examples
   packtracker:
     <<: *defaults
