(tests) Add cypress to cache path.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
             - presets
             - starter-kits
             - examples
+            - /root/.cache/Cypress
   packtracker:
     <<: *defaults
     steps:
