--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,15 @@ version: 2.1
 aliases:
   - &defaults
     working_directory: /tmp/storybook
+    CYPRESS_CACHE_FOLDER:
     docker:
       - image: circleci/node:12-browsers
   - &node10
     working_directory: /tmp/storybook
     docker:
       - image: circleci/node:10-browsers
+        environment:
+          CYPRESS_CACHE_FOLDER: '/tmp/storybook/.cache/Cypress'
 jobs:
   install:
     <<: *defaults
@@ -36,6 +39,7 @@ jobs:
             - node_modules
             - examples
             - packages
+            - .cache
   build:
     <<: *defaults
     steps:
@@ -52,7 +56,7 @@ jobs:
             - presets
             - starter-kits
             - examples
-            - /root/.cache/Cypress
+            - .cache
   packtracker:
     <<: *defaults
     steps:
