--- a/presets/postcss8/package.json
+++ b/presets/postcss8/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-postcss8",
-  "version": "1.0.0-rc.6",
+  "version": "1.0.0",
   "description": "Wingsuit PostCss 8 support.",
   "repository": {
     "type": "git",
