--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/core",
-  "version": "1.0.0-rc.6",
+  "version": "1.0.0",
   "description": "Wingsuit Core Design System.",
   "repository": {
     "type": "git",
@@ -29,8 +29,8 @@
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
     "@types/webpack": "^4.41.12",
-    "@wingsuit-designsystem/pattern": "1.0.0-rc.6",
-    "@wingsuit-designsystem/storybook": "1.0.0-rc.6",
+    "@wingsuit-designsystem/pattern": "1.0.0",
+    "@wingsuit-designsystem/storybook": "1.0.0",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
@@ -49,10 +49,10 @@
     "merge-deep": "^3.0.2",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^7.0.35",
     "postcss-loader": "^4.2.0",
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "postcss": "^7.0.35",
     "postcss-replace": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "resolve-url-loader": "^3.1.1",
