--- a/presets/tailwind2/package.json
+++ b/presets/tailwind2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-tailwind2",
-  "version": "1.0.0-rc.6",
+  "version": "1.0.0",
   "description": "Wingsuit TailwindCSS 2 preset.",
   "repository": {
     "type": "git",
@@ -27,10 +27,10 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "tailwindcss": "^2.0.1-compat",
-    "@wingsuit-designsystem/core": "1.0.0-rc.6",
+    "@wingsuit-designsystem/core": "1.0.0",
     "fs-extra": "^9.0.0",
-    "jsondiffpatch": "^0.3.11"
+    "jsondiffpatch": "^0.3.11",
+    "tailwindcss": "^2.0.1-compat"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
