--- a/presets/scss/package.json
+++ b/presets/scss/package.json
@@ -32,7 +32,10 @@
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^10.1.0"
+    "sass-loader": "^10.1.0",
+    "resolve-url-loader": "^3.1.1",
+    "postcss-loader": "^4.2.0",
+    "style-loader": "^1.0.2"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
