Add code blocks component.

--- a/docs/package.json
+++ b/docs/package.json
@@ -56,6 +56,9 @@
     "@wingsuit-designsystem/preset-pages": "1.0.1",
     "@wingsuit-designsystem/preset-tailwind2": "1.0.1",
     "@wingsuit-designsystem/storybook": "1.0.1",
+    "@wingsuit-designsystem/preset-postcss8": "1.0.1",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^9.7.4",
     "browser-sync-webpack-plugin": "^2.3.0",
     "core-js": "^3.4.1",
@@ -71,7 +74,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.0.1",
     "lodash": "^4.17.20",
-    "postcss": "^7",
+    "postcss": "^8.2.10",
     "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
     "react": "^16.13.1",
