--- a/docs/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/docs/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -15,7 +15,7 @@ section:
       preview:
         id: rich_text
         fields:
-          text: "<h2 class=text-center>Headline</h2>"
+          text: "<h2>Headline</h2>"
     column_1:
       type: text
       label: First Column
