--- a/docs/package.json
+++ b/docs/package.json
@@ -40,11 +40,13 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-links": "^6.1.0",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-viewport": "^6.1.0",
     "@storybook/addons": "^6.1.0",
     "@storybook/linter-config": "^2.5.0",
     "@storybook/react": "^6.1.0",
     "@storybook/storybook-deployer": "^2.8.7",
+    "@tailwindcss/jit": "^0.1.18",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@webpack-cli/serve": "^1.3.0",
@@ -54,11 +56,9 @@
     "@wingsuit-designsystem/pattern-react": "1.0.1",
     "@wingsuit-designsystem/preset-mdx": "1.0.1",
     "@wingsuit-designsystem/preset-pages": "1.0.1",
+    "@wingsuit-designsystem/preset-postcss8": "1.0.1",
     "@wingsuit-designsystem/preset-tailwind2": "1.0.1",
     "@wingsuit-designsystem/storybook": "1.0.1",
-    "@wingsuit-designsystem/preset-postcss8": "1.0.1",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^9.7.4",
     "browser-sync-webpack-plugin": "^2.3.0",
     "core-js": "^3.4.1",
@@ -88,6 +88,7 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
+    "@ryangjchandler/spruce": "^2.6.3",
     "@splidejs/splide": "^2.4.21",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
