--- a/packages/pattern/package.json
+++ b/packages/pattern/package.json
@@ -33,6 +33,7 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
+    "escape-html": "^1.0.3",
     "faker": "^4.1.0",
     "html-attribute-parser": "^1.0.0",
     "reflect-metadata": "^0.1.13",
