--- a/docs/source/default/patterns/02-molecules/code-block/code-block.wingsuit.yml
+++ b/docs/source/default/patterns/02-molecules/code-block/code-block.wingsuit.yml
@@ -11,7 +11,6 @@ code_block:
         - key: code1
           format: yaml
           title: Code 1
-          code_length: 12
           code: "<code>use: @molecules/avatar/avatar.twig \n
                   \tlabel: Avatar\n
                   \tdescription: An avatar represents an ....\n</code><code>
@@ -27,17 +26,18 @@ code_block:
         - key: code3
           title: Code 2
           format: yaml
-          code: "<code>use: @molecules/avatar/avatar.twig \n
-                  \tlabel: Avatar 2\n
-                  \tdescription: An avatar represents an ....\n</code><code>
-                  fields:\n
-                  \timage:\n
-                      \t\ttype: pattern\n
-                      label: Image\n
-                      preview:\n
-                        id: placeholder\n
-                        variant: image\n
-                        settings:\n
-                          style: 1x1_xs_sc\n</code>"
-
+          image_url: images/colors_export.png
+  variants:
+    dark:
+      label: Dark
+      configuration:
+        frame: bg-dark-700
+        content: bg-dark-500
+        active_tab: bg-dark-500
+    light:
+      label: Light
+      configuration:
+        frame: bg-gray-200
+        content: bg-white
+        active_tab: bg-gray-300
 
