--- a/docs/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/docs/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -23,10 +23,14 @@ button:
       description: Inverts colors
   configuration:
     size:
+      padding:
+        small: py-1 px-2
+        medium: py-1 px-2
+        large: py-2 px-4 md:py-4 md:px-8
       text:
         small: text-xs
         medium: text-base
-        large: text-xl
+        large: text-xl md:text-3xl
       icon:
         small: w-4 h-4
         medium: w-5 h-5
