--- a/docs/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
+++ b/docs/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
@@ -3,22 +3,21 @@ hero:
   label: Hero
   description: Hero section component, for all your presentation needs.
   fields:
-    headline:
-      type: text
-      label: Headline
-      preview: "Build bulletproof Twig Components in Storybook"
     text:
       type: text
-      label: Text
-      preview: "You will ♥ using️ it!"
+      label: Headline
+      preview: "<h1>Build bulletproof Twig Components in Storybook</h1><p class='lead'>Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins and responsive grid system.</p>"
     button:
       type: pattern
       label: Button
       preview:
         id: button
         variant: default
+        fields:
+          text: Get started
         settings:
-          size: text-xs
+          size: large
+          round: true
     button_second:
       type: pattern
       label: Button seco
