--- a/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -11,11 +11,11 @@ menu:
       label: Primary
       fields:
         items:
-          - title: BASICS
+          - title: Get Started
             url: "#"
             below:
-              - title: Introduction
-                url: "/basics/introduction"
+              - title: Tailwind
+                url: "/quick-start/tailwind"
           - title: GUIDES
             url: "/guides/quick-start-guide"
             below:
