--- a/docs/package.json
+++ b/docs/package.json
@@ -87,17 +87,12 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
-    "@glidejs/glide": "^3.4.1",
     "@ryangjchandler/spruce": "^2.6.3",
-    "@splidejs/splide": "^2.4.21",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
     "alpinejs": "^2.7.0",
-    "buffer": "^6.0.3",
-    "highlight.js": "^10.7.1",
-    "react-ssr-prepass": "^1.4.0",
-    "svg4everybody": "^2.1.9",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "prismjs": "^1.23.0",
+    "tailwindcss": "^2.0.4"
   },
   "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
 }
