--- a/docs/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
+++ b/docs/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
@@ -6,7 +6,10 @@ hero:
     text:
       type: text
       label: Headline
-      preview: "<h1>Build bulletproof Twig Components in Storybook</h1><p class='lead'>Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins and responsive grid system.</p>"
+      preview: "<h1 class='font-medium'>Build CMS independent Twig Components in Storybook</h1><p class='lead font-medium'>
+        Wingsuit is a free, open source tool to build and document Twig components and Design Tokens for your Design System. <br>
+
+        </p>"
     button:
       type: pattern
       label: Button
