New commands added.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,22 +40,33 @@
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js",
-    "test": "cd test && ./run_tests.sh"
+    "test": "cd test && ./run_tests.sh",
+    "test_jest": "jest"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "@wingsuit-designsystem/core": "1.0.3",
+    "assign-deep": "^1.0.1",
+    "ast-query": "^2.0.0",
+    "babel-generator": "^6.26.1",
+    "babel-traverse": "^6.26.0",
+    "babel-types": "^6.26.0",
+    "babylon": "^6.18.0",
     "chalk": "^2.1.0",
     "commander": "^5.1.0",
     "cross-spawn": "^7.0.3",
     "eslint-plugin-react": "^7.15.1",
     "git-clone": "^0.1.0",
     "gulp-rename": "<=1.2.2",
+    "inquirer": "^8.0.0",
+    "inquirer-fs-selector": "^1.2.0",
     "lerna": "^3.20.2",
     "leven": "^3.1.0",
     "lodash": "^4.17.15",
     "mv": "^2.1.1",
+    "prettier": "^2.3.0",
+    "query-ast": "^1.0.3",
     "rimraf": "^3.0.2",
     "typescript": "^3.4.0",
     "yeoman-environment": "^2.10.2",
