--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -54,6 +54,7 @@
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-replace": "^1.1.0",
+    "prettier": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "resolve-url-loader": "^3.1.1",
     "style-loader": "^1.0.2",
