--- a/presets/mdx/package.json
+++ b/presets/mdx/package.json
@@ -29,8 +29,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@wingsuit-designsystem/core": "1.0.3",
-    "highlight.js": "^10.7.1",
-    "remark-highlight.js": "^6.0.0"
+    "remark-prism": "^1.3.6"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
