--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,8 +32,7 @@
     "eslint-config-xo": "^0.27.2",
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.0.9",
-    "lint-staged": "^9.4.3",
-    "prettier": "^1.19.1"
+    "lint-staged": "^9.4.3"
   },
   "publishConfig": {
     "access": "public"
