--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
@@ -52,7 +52,7 @@ grid:
         equal: 'grid-cols-1 md:grid-cols-3'
         '25x50x25': 'grid-cols-1 md:grid-cols-25/50/25'
       4:
-        equal: 'grid-cols-1 md-grid-cols-2 lg:grid-cols-4'
+        equal: 'grid-cols-1 md:grid-cols-2 lg:grid-cols-4'
       5:
         equal: 'grid-cols-1 md:grid-cols-5'
     gutter:
