(fix) Fix typescript configs.

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "packages/*",
     "starter-kits/*",
     "presets/*",
+    "presets/examples/*",
     "examples/*"
   ],
   "optionalDependencies": {
