--- a/presets/pages/package.json
+++ b/presets/pages/package.json
@@ -42,6 +42,7 @@
     "js-yaml": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "static-site-generator-webpack-plugin": "^3.4.2"
+    "static-site-generator-webpack-plugin": "^3.4.2",
+    "yeoman-generator": "^5.3.0"
   }
 }
