--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,6 +224,8 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - attach_workspace:
+          at: .
       - run:
           name: Install dependencies
           command: |
