--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,6 +307,6 @@ workflows:
 #            - publish
   deploy:
     jobs:
-      - docs
-        requires:
-          - build
+      - docs:
+          requires:
+            - build
