(tests) fix docs step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,6 +307,10 @@ workflows:
 #            - publish
   deploy:
     jobs:
+      - install
+      - build:
+          requires:
+            - install
       - docs:
           requires:
             - build
