--- a/docs/source/default/patterns/03-organisms/download/download.wingsuit.yml
+++ b/docs/source/default/patterns/03-organisms/download/download.wingsuit.yml
@@ -1,6 +1,7 @@
 download:
   extends:
     - container.settings.bg
+    - container.settings.width
   use: "@organisms/download/download.twig"
   label: Download
   description: Wingsuit download section
@@ -8,9 +9,9 @@ download:
     intro:
       type: text
       label: Intro
-      preview: "<h2>Try it now!</h2>
+      preview: "<div class=\"text-center\"><h2>Try it now!</h2>
         <p>Get started using the automated command line tool. This command creates a Wingsuit demo project. The demo page uses the atomic design principle to structure the patterns..</p>
-        "
+        </div>"
     intro_drupal:
       type: text
       label: Intro
