--- a/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -23,6 +23,8 @@ menu:
                 url: "/guides/quick-start-guide"
               - title: Create new component
                 url: "/guides/create-component-guide"
+              - title: Create new app
+                url: "/guides/create-app-guide"
           - title: CONFIGURATIONS
             url: "#"
             below:
@@ -57,7 +59,7 @@ menu:
           - title: DRUPAL
             url: "/drupal/ui_patterns"
             below:
-              - title: Wingsuit Kickstarter (with UI Patterns and Layout Builder)
+              - title: Wingsuit Kickstarter
                 url: "/drupal/ui_patterns"
           - title: DOCUMENTATION
             url: "#"
