--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/docs",
-  "version": "1.0.3",
+  "version": "1.1.0-alpha.0",
   "description": "Wingsuit documentation.",
   "main": "",
   "private": true,
@@ -50,15 +50,15 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@webpack-cli/serve": "^1.3.0",
-    "@wingsuit-designsystem/cli": "1.0.3",
-    "@wingsuit-designsystem/core": "1.0.3",
-    "@wingsuit-designsystem/pattern": "1.0.3",
-    "@wingsuit-designsystem/pattern-react": "1.0.3",
-    "@wingsuit-designsystem/preset-mdx": "1.0.3",
-    "@wingsuit-designsystem/preset-pages": "1.0.3",
-    "@wingsuit-designsystem/preset-postcss8": "1.0.3",
-    "@wingsuit-designsystem/preset-tailwind2": "1.0.3",
-    "@wingsuit-designsystem/storybook": "1.0.3",
+    "@wingsuit-designsystem/cli": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/core": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/pattern": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/pattern-react": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/preset-mdx": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/preset-pages": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/preset-postcss8": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/preset-tailwind2": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/storybook": "1.1.0-alpha.0",
     "autoprefixer": "^9.7.4",
     "browser-sync-webpack-plugin": "^2.3.0",
     "core-js": "^3.4.1",
